[package]
name = "rightnow"
version = "0.1.0"
edition = "2021"
description = "A simple library to get the current time since the unix epoch in any measurement one could desire"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
